--- a/stylesheets/utilities.css
+++ b/stylesheets/utilities.css
@@ -7,6 +7,9 @@
 .ml10 {
   margin-left: 10px;
 }
+.ml30 {
+  margin-left: 30px;
+}
 .mr10 {
   margin-right: 10px;
 }
